heritage klasörü tamamlandı

--- a/motorlar/Heritage/R18_classic.html
+++ b/motorlar/Heritage/R18_classic.html
@@ -72,7 +72,84 @@
         <li><a href="#">İletişim</a></li>
       </ul>
     </div>
-    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
+    <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
+	
+	
+	<table width = "98%" align = "center" >
+		<tr>
+			
+			<td colspan = "5" ><img src = "../../resimler/motorlar/heritage/R18_classic/as.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "160" ><a class = "resimBaslik">Yakıt Tipi</a></td>
+			<td width = "110" ><a class = "resimBaslik">Güç</a></td>
+			<td width = "110" ><a class = "resimBaslik">Cc</a></td>
+			<td></td>
+			
+		</tr>
+		<tr>
+			
+			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">158 bg</a></td>
+			<td><a class = "resimAciklama">1.802 cc</a></td>
+			
+		</tr>
+	</table>
+	
+	<br><br>
+	
+	<pre>
+		<p class = "icerik" >
+	 
+								<b>R 18 CLASSIC
+						İKONİK. NOSTALJİK. </b>
+
+	    </p>
+		
+	</pre>
+	
+	<br><br>
+	
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik">R 18 Classic, nostaljik BMW tasarımına sahip modern bir cruiser motosiklet. Touring amaçlı ilk cruiser motosikletlerin başlangıcını hatırlatıyor. Ayrıca R 18 Classic First Edition modelinde bulunan beyaz çift çizgi gibi motosiklet tarihimizin modası geçmeyen öğelerinden birini akla getiriyor. Motosikletin kalbinde şimdiye kadar ürettiğimiz en büyük hacme sahip boxer motoru var. Onun işi size rahat gezintiler ve saf mutluluk sunmak.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R18_classic/2.webp" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	<!-- slider -->
+	
+	<pre>
+	<!-- ozel class acılmalı -->
+		<p class = "icerik" align="center" >
+	 
+	<b>KISACA ÖNE ÇIKAN ÖZELLİKLER.</b>
+	Damla şeklindeki yakıt deposu geçmişimizden gelen bir simge ve tıpkı uzatılmış susturucu gibi 
+	R 18 Classic’in tipik ince silüetini vurguluyor. Çift kızaklı çelik çerçeve, her kilometreyi 
+	bir deneyim haline dönüştüren devasa bir şekle sahip motoru sarmalıyor.
+															
+	    </p>
+		
+	</pre>
+	<table width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklamaBaslik"><b>Motosikletiniz sizi yansıtsın</b><br>Option 719, kendi motosikletinizi tasarlamanız için geniş bir seçenek yelpazesi sunuyor. Option 719 AERO Tasarım Paketinin içeriğinde yer alan ustalıkla zımparalanmış ve anodize edilmiş parçalarla gerçekten şık vurgular yaratabilirsiniz. Gümüş kontrast kesimli Option 719 AERO döküm jantlar, motosikletinizin görünümüne mükemmel bir hava katacak. Dahası, pürtüklü sentetik deri malzemeden üretilen ve işlemeli BMW amblemini taşıyan Option 719 selenin sunduğu konforun keyfini yolcunuzla beraber çıkarabilirsiniz.</a></td>
+			<td width = "45%" ><img src = "../../resimler/motorlar/heritage/R18_classic/yansıt.jpg" width = "100%" ></td>
+			
+		</tr>
+		
+	</table>
+	
+	
+	<!-- InstanceEndEditable --></div>
     <div id="fooder">
     	<table width="100%" >
         	
