iletişim ve KVKK yapıldı katolog oluşturuldu.

--- a/elektirikli_modeller/elektrikliModeller.html
+++ b/elektirikli_modeller/elektrikliModeller.html
@@ -69,7 +69,7 @@
           </ul>
         </li>
         <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="#">İletişim</a></li>
+        <li><a href="../iletişim.html">İletişim</a></li>
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
@@ -312,7 +312,7 @@
                 <td align = "center" width="50%" >HIZLI ERİŞİM</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >İletişim</a></td>
+            	<td align = "center" ><a href = "../iletişim.html" class = "link" >İletişim</a></td>
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
