--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </ul>
         </li>
         <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="#">İletişim</a></li>
+        <li><a href="iletişim.html">İletişim</a></li>
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
@@ -137,7 +137,7 @@
                 <td align = "center" width="50%" >HIZLI ERİŞİM</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >İletişim</a></td>
+            	<td align = "center" ><a href = "iletişim.html" class = "link" >İletişim</a></td>
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
