--- a/modeller/XSeries/X3Series.html
+++ b/modeller/XSeries/X3Series.html
@@ -71,7 +71,7 @@ BMW X3 Series
           </ul>
         </li>
         <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="#">İletişim</a></li>
+        <li><a href="../../iletişim.html">İletişim</a></li>
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
@@ -200,7 +200,7 @@ BMW X3 Series
                 <td align = "center" width="50%" >HIZLI ERİŞİM</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >İletişim</a></td>
+            	<td align = "center" ><a href = "../../iletişim.html" class = "link" >İletişim</a></td>
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
