--- a/motorlar/Adventure/R1250Gs.html
+++ b/motorlar/Adventure/R1250Gs.html
@@ -16,9 +16,10 @@
 <div id="anaDiv">
   <div id="Header">
   
-    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="180" /></a></div>
+    <div id="logo"><a href = "../../index.html"><img src = "../../resimler/logolar/bmwLogo.png" width="100%" /></a>
+    </div>
     
-    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="1520" /></div>
+    <div id="banner"><img src="../../resimler/banner/banner.jpg" width="100%" /></div>
   </div>
   <div id="icerik1Dİv">
     <div id="menuDiv">
@@ -68,7 +69,7 @@
           </ul>
         </li>
         <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="#">İletişim</a></li>
+        <li><a href="../../iletişim.html">İletişim</a></li>
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
@@ -176,7 +177,7 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
                 <td align = "center" width="50%" >HIZLI ERİŞİM</a></td>
             </tr>
             <tr>
-            	<td align = "center" ><a href = "" class = "link" >İletişim</a></td>
+            	<td align = "center" ><a href = "../../iletişim.html" class = "link" >İletişim</a></td>
                 <td align = "center" ><a href = "" class = "link" >Model Listesi</a></td>
             </tr>
             <tr>
