sport motorlar eklendi ve tamamlandı elektrikli motorlar listeden çıkarıldı son olarak motorlalırn link bağlamaları yapıldı

--- a/motorlar/M/M1000R.html
+++ b/motorlar/M/M1000R.html
@@ -4,8 +4,7 @@
 <link rel="icon" href="../../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
-<title>
-</title>
+<title> Yeni M 1000 R </title>
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
