--- a/elektirikli_modeller/elektrikliModeller.html
+++ b/elektirikli_modeller/elektrikliModeller.html
@@ -26,6 +26,8 @@
       <ul id="MenuBar1" class="MenuBarVertical">
         <li><a class="MenuBarItemSubmenu" href="../modeller/modeller.html">Modeller</a>
           <ul>
+          	<li><a href="../modeller/modeller.html#X">X Series</a></li>
+            <li><a href="../modeller/modeller.html#M">M Series</a></li>
             <li><a href="../modeller/modeller.html#1">1 Series</a></li>
             <li><a href="../modeller/modeller.html#2">2 Series</a></li>
             <li><a href="../modeller/modeller.html#3">3 Series</a></li>
@@ -34,25 +36,21 @@
             <li><a href="../modeller/modeller.html#6">6 Series</a></li>
             <li><a href="../modeller/modeller.html#7">7 Series</a></li>
             <li><a href="../modeller/modeller.html#8">8 Series</a></li>
-            <li><a href="../modeller/modeller.html#M">M Series</a></li>
-            <li><a href="#">Z Series</a></li>
-            <li><a href="../modeller/modeller.html#X">X Series</a></li>
+            <li><a href="#">Z4 Series</a></li>
           </ul>
         </li>
         <li><a href="elektrikliModeller.html">Elektrikli Modeller</a>
           <ul>
-            <li><a href="#">İ Series</a></li>
-            <li><a href="#">İX Series</a></li>
+            <li><a href="elektrikliModeller.html#I">İ Series</a></li>
+            <li><a href="elektrikliModeller.html#IX">İX Series</a></li>
           </ul>
         </li>
         <li><a href="../motorlar/motorlar.html">Motosikletler</a>
         	<ul>
-            	<li><a href="#">Advanture</a></li>
-            	<li><a href="#">Heritage</a></li>
-			 	<li><a href="#">Sport</a></li>
-            	<li><a href="#">M</a></li>
-				<li><a href="#">Tour</a></li>
-            	<li><a href="#">Urban Mobility</a></li>
+            	<li><a href="../motorlar/motorlar.html#Adventure">Advanture</a></li>
+            	<li><a href="../motorlar/motorlar.html#Heritage">Heritage</a></li>
+			 	<li><a href="../motorlar/motorlar.html#Sport">Sport</a></li>
+            	<li><a href="../motorlar/motorlar.html#M">M</a></li>
           	</ul>
         </li>
         <li><a href="#">Aksesuarlar</a></li>
@@ -71,8 +69,8 @@
 		
 		<tr>
 			
-			<td align = "center" width = "20" ><a href = "elektrikli_modeller.html#X" class = "link" >İ</a></td>
-			<td align = "center" width = "20" ><a href = "elektrikli_modeller.html#X" class = "link" >İX</a></td>
+			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#I" class = "link" >İ</a></td>
+			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#IX" class = "link" >İX</a></td>
 			
 		</tr>
 	</table>
@@ -80,7 +78,7 @@
 	<br><br><br>
 	
 	
-	<a name = "İ">
+	<a name = "I">
 	<table cellspacing = "10" border = "0" >
 		
 		<tr>
@@ -163,7 +161,7 @@
 	</table>	
 	</a>
 	<hr size = "3" color = "#808080" >
-	<a name = "iX">
+	<a name = "IX">
 	<table cellspacing = "10" border = "0" >
 		
 		<tr>
