--- a/modeller/XSeries/X1Series.html
+++ b/modeller/XSeries/X1Series.html
@@ -28,6 +28,8 @@ BMW X1 Series
       <ul id="MenuBar1" class="MenuBarVertical">
         <li><a class="MenuBarItemSubmenu" href="../modeller.html">Modeller</a>
           <ul>
+          	<li><a href="../modeller.html#X">X Series</a></li>
+            <li><a href="../modeller.html#M">M Series</a></li>
             <li><a href="../modeller.html#1">1 Series</a></li>
             <li><a href="../modeller.html#2">2 Series</a></li>
             <li><a href="../modeller.html#3">3 Series</a></li>
@@ -36,25 +38,21 @@ BMW X1 Series
             <li><a href="../modeller.html#6">6 Series</a></li>
             <li><a href="../modeller.html#7">7 Series</a></li>
             <li><a href="../modeller.html#8">8 Series</a></li>
-            <li><a href="../modeller.html#M">M Series</a></li>
-            <li><a href="#">Z Series</a></li>
-            <li><a href="../modeller.html#X">X Series</a></li>
+            <li><a href="#">Z4 Series</a></li>
           </ul>
         </li>
         <li><a href="../../elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
           <ul>
-            <li><a href="#">İ Series</a></li>
-            <li><a href="#">İX Series</a></li>
+            <li><a href="../../elektirikli_modeller/elektrikliModeller.html#I">İ Series</a></li>
+            <li><a href="../../elektirikli_modeller/elektrikliModeller.html#IX">İX Series</a></li>
           </ul>
         </li>
         <li><a href="../../motorlar/motorlar.html">Motosikletler</a>
         	<ul>
-            	<li><a href="#">Advanture</a></li>
-            	<li><a href="#">Heritage</a></li>
-			 	<li><a href="#">Sport</a></li>
-            	<li><a href="#">M</a></li>
-				<li><a href="#">Tour</a></li>
-            	<li><a href="#">Urban Mobility</a></li>
+            	<li><a href="../../motorlar/motorlar.html#Adventure">Advanture</a></li>
+            	<li><a href="../../motorlar/motorlar.html#Heritage">Heritage</a></li>
+			 	<li><a href="../../motorlar/motorlar.html#Sport">Sport</a></li>
+            	<li><a href="../../motorlar/motorlar.html#M">M</a></li>
           	</ul>
         </li>
         <li><a href="#">Aksesuarlar</a></li>
