--- a/kataloglar.html
+++ b/kataloglar.html
@@ -37,7 +37,7 @@
             <li><a href="modeller/modeller.html#6">6 Series</a></li>
             <li><a href="modeller/modeller.html#7">7 Series</a></li>
             <li><a href="modeller/modeller.html#8">8 Series</a></li>
-            <li><a href="#">Z4 Series</a></li>
+            <li><a href="modeller/modeller.html#Z4">Z4 Series</a></li>
           </ul>
         </li>
         <li><a href="elektirikli_modeller/elektrikliModeller.html">Elektrikli Modeller</a>
@@ -98,7 +98,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/X1SeriesKatalog.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMW1Series.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -164,7 +164,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMW4SeriesCoupe.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -186,7 +186,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMW4SeriesCabrio.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -208,7 +208,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMW5SeriesSedan.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -230,7 +230,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMW7Series.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -252,7 +252,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWX1.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -274,7 +274,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWX7.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -296,7 +296,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWİ4.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -318,7 +318,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWİX1.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -340,7 +340,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWİX3.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -362,7 +362,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWİX.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -384,7 +384,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWM3VeM4.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
@@ -406,7 +406,7 @@
 		</tr>
 		<tr>
 			
-			<td valign = "top" ><a href = "katalog/" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
+			<td valign = "top" ><a href = "katalog/BMWM5Compatation.pdf" target = "_blank" class = "arabaDugme">E-Katalogu İndirin</a></td>
 			
 		</tr>
 		
