--- a/elektirikli_modeller/İXSeries/İX1.html
+++ b/elektirikli_modeller/İXSeries/İX1.html
@@ -37,7 +37,7 @@
             <li><a href="../../modeller/modeller.html#6">6 Series</a></li>
             <li><a href="../../modeller/modeller.html#7">7 Series</a></li>
             <li><a href="../../modeller/modeller.html#8">8 Series</a></li>
-            <li><a href="#">Z4 Series</a></li>
+            <li><a href="../../modeller/modeller.html#Z4">Z4 Series</a></li>
           </ul>
         </li>
         <li><a href="../elektrikliModeller.html">Elektrikli Modeller</a>
