BMWX7 Sayfasına başlangıç

--- a/elektirikli_modeller/elektrikliModeller.html
+++ b/elektirikli_modeller/elektrikliModeller.html
@@ -69,13 +69,13 @@
 		
 		<tr>
 			
-			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#I" class = "link" >İ</a></td>
-			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#IX" class = "link" >İX</a></td>
+			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#I" class = "buton" >İ</a></td>
+			<td align = "center" width = "20" ><a href = "elektrikliModeller.html#IX" class = "buton" >İX</a></td>
 			
 		</tr>
 	</table>
 	
-	<br><br><br>
+	<br><br><br><br>
 	
 	
 	<a name = "I">
@@ -295,7 +295,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
