--- a/elektirikli_modeller/İSeries/İ4.html
+++ b/elektirikli_modeller/İSeries/İ4.html
@@ -243,7 +243,7 @@
 	<br><br>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
