--- a/modeller/XSeries/X1Series.html
+++ b/modeller/XSeries/X1Series.html
@@ -177,7 +177,7 @@ BMW X1 Series
 	<br><br><br>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
