--- a/motorlar/Adventure/R1250Gs.html
+++ b/motorlar/Adventure/R1250Gs.html
@@ -159,7 +159,7 @@ HİÇBİR HEDEF ÇOK UZAK DEĞİL</b>
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
