--- a/motorlar/Sport/S1000R.html
+++ b/motorlar/Sport/S1000R.html
@@ -64,7 +64,7 @@
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->icerik<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
