--- a/motorlar/Sport/S1000RR.html
+++ b/motorlar/Sport/S1000RR.html
@@ -223,7 +223,7 @@
 
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
