--- a/deneme/deneme1.html
+++ b/deneme/deneme1.html
@@ -205,7 +205,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
