--- a/elektirikli_modeller/İSeries/İ7.html
+++ b/elektirikli_modeller/İSeries/İ7.html
@@ -186,7 +186,7 @@
 	
 	
 <!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
