--- a/elektirikli_modeller/İXSeries/İX1.html
+++ b/elektirikli_modeller/İXSeries/İX1.html
@@ -203,7 +203,7 @@
 
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
