--- a/elektirikli_modeller/İXSeries/İX2.html
+++ b/elektirikli_modeller/İXSeries/İX2.html
@@ -164,7 +164,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
