--- a/elektirikli_modeller/İXSeries/İX3.html
+++ b/elektirikli_modeller/İXSeries/İX3.html
@@ -203,7 +203,7 @@ BMW iX3:
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
