--- a/iletişim.html
+++ b/iletişim.html
@@ -294,7 +294,7 @@
 	</div>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
