--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </table>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
