--- a/kataloglar.html
+++ b/kataloglar.html
@@ -414,7 +414,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
