--- a/modeller/XSeries/X2Series.html
+++ b/modeller/XSeries/X2Series.html
@@ -177,7 +177,7 @@ BMW X2 Series
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
