--- a/modeller/XSeries/X3Series.html
+++ b/modeller/XSeries/X3Series.html
@@ -183,7 +183,7 @@ BMW X3 Series
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
