--- a/motorlar/Adventure/R1300Gs.html
+++ b/motorlar/Adventure/R1300Gs.html
@@ -164,7 +164,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
