--- a/motorlar/Heritage/R18_classic.html
+++ b/motorlar/Heritage/R18_classic.html
@@ -140,7 +140,7 @@
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
