--- a/motorlar/Heritage/R_18.html
+++ b/motorlar/Heritage/R_18.html
@@ -179,7 +179,7 @@ R 18, eksiksiz bir kişiselleştirme için en temel özelliklerine indirgendi.
 	
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
