--- a/motorlar/Heritage/R_nineT.html
+++ b/motorlar/Heritage/R_nineT.html
@@ -169,7 +169,7 @@
 	<br><br>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
