--- a/motorlar/M/M1000R.html
+++ b/motorlar/M/M1000R.html
@@ -205,7 +205,7 @@
 	<br><br>
 		
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
