--- a/motorlar/M/M1000RR.html
+++ b/motorlar/M/M1000RR.html
@@ -192,7 +192,7 @@
 	<br><br>
 	
 	<!-- InstanceEndEditable --></div>
-    <div id="fooder">
+    <div id="footer">
     	<table width="100%" >
         	
             <tr>
