BMWX7 Sayfası bitti ve XMSeries oluşturuldu

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -197,7 +197,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "XSeries/XMSeries.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
@@ -896,7 +896,6 @@
 		<tr>
 			
 			<td colspan = 3 ><a class = "arabaAnaBaslik">Z4 Series <a></td>
-			<td colspan = 3 ><a class = "arabaAnaBaslik">Z Series <a></td>
 		
 		</tr>
 		<tr>
