BMW M3 Cs Tasarımı Tamamlandı

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -263,7 +263,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "MSeries/BMW3Cs.html" class = "link" >
+				<a href = "MSeries/BMWM3Cs.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
