BMW 1 Series tamamlandı

--- a/modeller/1Series/1Series.html
+++ b/modeller/1Series/1Series.html
@@ -67,11 +67,7 @@
 	
 	
 	<table width = "98%" align = "center" class = "resim" >
-		<tr>
-			
-			<td colspan = "5" height = "150" valign = "middle" ><a class = "baslik">BMW XM Series</a></td>
-			
-		</tr>
+	
 		<tr>
 			<td colspan = "5" width = "100%" ><img src = "../../resimler/modeller/1Series/1_series/1.jpg" width = "100%" ></td>
 		</tr>
@@ -119,6 +115,61 @@
 		</tr>
 	</table>
 	<br><br>
+	<table border = "0" width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/bobrek.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/led.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/ayna.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> BMW Böbrek Izgaraları. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> LED farlar. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Siyah ayna kapakları. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">Karakteristik BMW Böbrek Izgaraları, bağlantılı bir öğe olarak tasarlanmıştır ve parlak krom çerçeveye ve parlak siyah dikey çubuklara sahiptir. Öne çıkan merkezi görsel bir öğe olan BMW Böbrek Izgaraları önden bakıldığında otomobilin duruşunu ve estetiğini vurgular.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Gündüz farlarından kısa ve uzun huzme farlara kadar, LED farların tüm işlevleri daha uzun kullanım ömrüne sahiptir ve LED teknolojisi sayesinde daha fazla enerji tasarrufu sağlar. Dinamik ve düz farlar, gün ışığına benzer renkle mükemmel bir aydınlatma sunması sayesinde geceleri ve kötü hava koşullarında görüş kabiliyetini artırır.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Ayna kapakları, gövde rengi yerine parlak Siyah renktedir. Otomobilin atletik karakterini görsel olarak vurgular ve çarpıcı bir kişisel izlenim yaratır.</a></td>
+			
+		</tr>
+		
+	</table>
+	<br><br>
+	
+	<!-- SLider -->
+	
+	<br><br>
+	<table border = "0" width = "75%" cellpadding = "10" align = "center" >
+		
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/detay.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/stop.jpg" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/1Series/1_series/ayna.jpg" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> BMW Individual Parlak Siyah Dış Detaylar. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Stop lambaları. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Egzoz çıkışı kaplaması. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">90 mm egzoz çıkışı kaplaması (solda 3 silindirli motorlar, solda ve sağda 4 silindirli motorlar), görsel bir vurgu oluşturur ve otomobilin sportif karakterini vurgular.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Şekillendirilmiş dış tasarım geometrisi ile 2 parçalı stop lambaları, geleneksel aydınlatma teknolojisi kullanılarak tasarlanmıştır. Her ikisi de gövdede ve bagaj kapağında aydınlatma öğesine sahiptir ve bu sayede yükleme genişliğini optimize eder. Buna ek olarak, stop lambalarında diğer özelliklerin yanı sıra LED reflektör teknolojisine sahip geri vites ışığı bulunur.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">BMW Individual Parlak Siyah Dış Detaylar, parlak siyah renkte birçok donanım seçeneği sunar. Bunlar arasında cam girintisi kaplamaları, cam çerçeveleri ve kılavuzları, B sütununun yanı sıra dış ayna çerçeveleri, ayna kolu, kanat ve ayna ayağı yer alır.</a></td>
+			
+		</tr>
+		
+	</table>
 	
 	<!-- InstanceEndEditable --></div>
     <div id="footer">
