BMWM4GranCoupe Sayfası Tamamlandı

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -286,7 +286,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "MSeries/BMWM4GranCoupe.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
