sayfalara link eklendi ve 2 series gran copue bitti

--- a/modeller/ZSeries/Z4Series.html
+++ b/modeller/ZSeries/Z4Series.html
@@ -6,6 +6,7 @@
 <!-- InstanceBeginEditable name="baslik" -->
 <title> BMW Z4
 </title>
+<link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
