--- a/modeller/1Series/1Series.html
+++ b/modeller/1Series/1Series.html
@@ -6,6 +6,7 @@
 <!-- InstanceBeginEditable name="baslik" -->
 <title> Yeni BMW 1 Series 
 </title>
+<link href="../../css/araba.css" rel="stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
