BMW M8 Gran Coupe Sayfası Tamamlandı

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -313,7 +313,7 @@
 		<tr>
 			
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "MSeries/BMWM5Cs.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
@@ -336,7 +336,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "MSeries/BMWM8GranCoupe.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
