BMW 8 Series Coupe sitesi tamamlandı

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -401,7 +401,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "8Series/BMW8SeriesCoupe.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
