BMW7Series Sayfası Tamamlandı

--- a/modeller/8Series/BMW8SeriesCoupe.html
+++ b/modeller/8Series/BMW8SeriesCoupe.html
@@ -4,8 +4,7 @@
 <link rel="icon" href="../../resimler/logolar/bmwLogo.png" type="image/x-icon">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- InstanceBeginEditable name="baslik" -->
-<title>BMW 8 Series Coupe
-</title>
+<title>BMW 8 Series Coupe</title>
 <link href = "../../css/araba.css" rel = "stylesheet" type = "text/css" >
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
