4 series gran coupe eklendi ve link verildi

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -622,7 +622,7 @@
 		<tr>
 			
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "4Series/4GranCoupe" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
