--- a/modeller/4Series/4Cabrio.html
+++ b/modeller/4Series/4Cabrio.html
@@ -105,7 +105,7 @@
 	
 	<br><br>
 	
-	<<table align = "left" width = "85%" >
+	<table align = "left" width = "85%" >
 		<tr>
 			<td>
 				<p class = "icerik" >
