BMW5SeriesSedan Sayfası Tamamlandı

--- a/modeller/5Series/BMW5SeriesSedan.html
+++ b/modeller/5Series/BMW5SeriesSedan.html
@@ -85,7 +85,7 @@
 		</tr>
 		<tr>
 			
-			<td><a class = "resimAciklama">Benzin</a></td>
+			<td><a class = "resimAciklama">Benzin - Elektrikli</a></td>
 			<td><a class = "resimAciklama">197 bg</a></td>
 			<td><a class = "resimAciklama">h:7.3 sn</a></td>
 			<td><a class = "resimAciklama">228 km/sa</a></td>
@@ -94,15 +94,94 @@
 		</tr>
 	</table>
 	
-	<table width = "90%" align = "center" >
+	<br><br><br>
+	
+	<table width = "90%" align = "center" cellspacing = "15" >
 		
 		<tr>
 			
 			<td colspan = "3" align = "center" ><a class = "gizliBaslik"> Tasarım </a></td>
 			
 		</tr>
+		<tr>
+			
+			<td colspan = "3" align = "center" ><h1>DIŞ TASARIMDA ÖNE ÇIKANLAR.</h1></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> Karanlıkta bile kolayca tanınır. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Otomobile binerken benzersiz bir karşılama. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Neredeyse açık havada oturma hissi. </a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama">BMW Iconic Glow Böbrek Izgaraları özellikle karanlıkta göze çarpıyor. Otomobil hareketsizken ve hareket halinde konturlarındaki beyaz ışıklarla kendini gösteriyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Dinamik Karşılama Aydınlatması otomobile binerken ve inerken kapı alanını güvenlik amacıyla aydınlatıyor ve aynı zamanda ışık animasyonlarıyla sizi karşılıyor.</a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama">Panoramik cam tavan, otomobilin içinin daha da geniş görünmesini sağlıyor. Daha fazla ışığı içeriye alarak her koltukta üstü açık otomobil atmosferinden keyif almanızı sağlıyor.</a></td>
+			
+		</tr>
+	</table>
+	
+	<br><br><br>
+	
+	<table width = "90%" align = "center" cellspacing = "15" >
+		
+		<tr>	
+			
+			<td align = "center" ><h1>İÇ TASARIM</h1></td>
+			
+		</tr>
+		<tr>
+			
+			<td><img src = "../../resimler/modeller/5Series/5_sedan/aracİci.png" width = "100%" ></td>
+			
+		</tr>
 		
 	</table>
+	
+	<br><br><br>
+	
+	<table width = "90%" align = "center" cellspacing = "15" >
+		
+		<tr>
+			
+			<td colspan = "3" align = "center" ><h1>İÇ TASARIMDA ÖNE ÇIKANLAR.</h1></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			<td width = "30%" ><img src = "../../resimler/modeller/5Series/5_sedan" width = "100%" ></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "center" ><a class = "aciklamaBaslik"> İşlevsel ve hayranlık uyandırıcı şekilde cazip. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Tüm koltuklarda en iyi ses. </a></td>
+			<td align = "center" ><a class = "aciklamaBaslik"> Tam Entegre video akışı. 	</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td align = "justify" valign = "top" ><a class = "aciklama"> BMW Interaction Bar’da yer alan “My Modes” ayarlarının her biri, isteyebileceğiniz tüm sürekli değişen görsel deneyimler ve duygusal aydınlatma modlarını sunuyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Kokpit, Bowers & Wilkins Surround Ses Sistemiyle adeta bir konser salonu haline geliyor; ve özel yapım ses sistemi ile 18 hoparlör ve 655 watt güç sunuyor. </a></td>
+			<td align = "justify" valign = "top" ><a class = "aciklama"> Bekleme süresini kısaltmak için kapsamlı bir medya kitaplığından çabucak uygun filmleri veya dizileri bulabilirsiniz. </a></td>
+			
+		</tr>
+	</table>
+	
+	<br><br><br>
+	
 	
 	<!-- InstanceEndEditable --></div>
     <div id="footer">
