5 Series tourning sayfası bitti ve böylece modeller sayfası tamamlandı

--- a/modeller/modeller.html
+++ b/modeller/modeller.html
@@ -573,7 +573,7 @@
 				</a>
 			</td>
 			<td width = "30%" >
-				<a href = "#" class = "link" >
+				<a href = "5Series/5SeriesTourning.html" class = "link" >
 					<table width = "100%" >
 				
 						<tr>
