fiyat Listesi html oluşturuldu ve linkler düzenlendi

--- a/modeller/6Series/BMW6GranTrusimo.html
+++ b/modeller/6Series/BMW6GranTrusimo.html
@@ -6,6 +6,7 @@
 <!-- InstanceBeginEditable name="baslik" -->
 <title>BMW 6 Series Gran Trusimo</title>
 <link href = "../../css/araba.css" rel = "stylesheet" type = "text/css" />
+<link href = "../../css/BMW6GranTrusimo.css" rel = "stylesheet" type = "text/css" />
 <!-- InstanceEndEditable -->
 <link href="../../css/style.css" rel="stylesheet" type="text/css" />
 <link href="../../SpryAssets/SpryMenuBarVertical.css" rel="stylesheet" type="text/css" />
@@ -58,10 +59,10 @@
           <ul>
             <li><a href="../../kataloglar.html">Katologlar</a></li>
             <li><a href="../../onlineHizmetler/MYBMW.html">MY BMW</a></li>
+            <li><a href="../../onlineHizmetler/fiyatListesi.html">Fiyat Listesi</a></li>
           </ul>
         </li>
-        <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="../../iletişim.html">İletişim</a></li>
+        <li><a href="../../iletişim.html">İletişim</a></li>	
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
@@ -108,14 +109,14 @@
 			<table border = "0" width = "100%" align = "center" >
 				
 				<tr>
-					<td width = "50%" ><font size = "5">Ortalama yakıt tüketimi (l/100km) (BMW 630i Gran Turismo)</font></td>
+					<td width = "50%" ><font size = "5">Ortalama yakıt tüketimi (l/100km) (BMW 6 Gran Turismo)</font></td>
 					<td width = "50%" align = "right" ><font size = "4">7.3</font></td>
 				</tr>
 				<tr>
 					<td colspan = "2" ><hr size = "0.1" color = "#aaaaaa" ></td>
 				</tr>
 				<tr>
-					<td width = "50%" ><font size = "5">Ortalama CO2 emisyonu (g/km) (BMW 630i Gran Turismo)</font></td>
+					<td width = "50%" ><font size = "5">Ortalama CO2 emisyonu (g/km) (BMW 6 Gran Turismo)</font></td>
 					<td width = "50%" align = "right" ><font size = "4">166</font></td>
 				</tr>
 				<tr>
@@ -133,26 +134,30 @@
 	
 	<!-- sonra Yapılacak resimlerle bmw sitesindeki gibi ayarlanıcak -->
 	
-	<table border = "0" width = "90%" align = "center" >
+	<div class = "resimAnaDiv" >
+		<div class = "yaziDiv" >
+			<h1>
+				BMW 6 SERİSİ GRAN TURISMO’NUN TASARIMI.
+			</h1>
+			<h3>
+				İç ve dış tasarımın öne çıkan, etkileyici ve karakteristik özelliklerini keşfedin.
+			</h3>
+			<p>
+				BMW 6 Serisi Gran Turismo’nun benzersiz şıklık sunan dış tasarımı, dinamik görünümü ve olağanüstü karakteriyle sizi ilk andan itibaren etkileyecek.
+				Ön bölümde güncellenen far tasarımı ile birlikte BMW Böbrek Izgarasının daha açılı biçimi, otomobile çarpıcı bir görünüm ve belirgin bir odak kazandırıyor.
+				Cömert boyutlarına rağmen, akıcı çizgi grafikleri ve güçlü tasarım dili, coupé'ye benzeyen tavan çizgisinden sportif egzoz çıkışlarının yer aldığı geniş arka 
+				tasarıma kadar BMW 6 Serisi Gran Turismo'nun sportif iddiasını ortaya koyuyor. Şık ve ferah iç tasarım, üst düzey konfor sunuyor. Spor deri direksiyon veya parlak
+				siyah kumanda öğeleri gibi yüksek kaliteli detaylar ise iç tasarımın dinamik ve şık görünümünü öne çıkıyor.
+			</p>
+		</div>-
+		<div class = "resimDiv1" >
+			<img src = "../../resimler/modeller/6Series/6GranTrusımo/6grantrusımoızgara.jpg" width = "100%" >
+		</div>
+		<div class = "resimDiv2" >
+			<img src = "../../resimler/modeller/6Series/6GranTrusımo/6grantrusımoledfar.jpg" width = "100%" >
+		</div>
 		
-		<tr>
-			
-			<td colspan = "2" align = "center" ><h1>BMW 6 SERİSİ GRAN TURISMO’NUN TASARIMI.</h1></td>
-			
-		</tr>
-		<tr>
-			
-			<td colspan = "2" align = "center" ><h3>İç ve dış tasarımın öne çıkan, etkileyici ve karakteristik özelliklerini keşfedin.</h3></td>
-			
-		</tr>
-		<tr>
-			
-			<td colspan = "2" align = "center" ><h3>İç ve dış tasarımın öne çıkan, etkileyici ve karakteristik özelliklerini keşfedin.</h3></td>
-			
-		</tr>
-		
-	</table>
-	
+	</div>
 	
 	<!-- InstanceEndEditable --></div>
     <div id="footer">
