--- a/modeller/XSeries/X3Series.html
+++ b/modeller/XSeries/X3Series.html
@@ -60,10 +60,10 @@ BMW X3 Series
           <ul>
             <li><a href="../../kataloglar.html">Katologlar</a></li>
             <li><a href="../../onlineHizmetler/MYBMW.html">MY BMW</a></li>
+            <li><a href="../../onlineHizmetler/fiyatListesi.html">Fiyat Listesi</a></li>
           </ul>
         </li>
-        <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="../../iletişim.html">İletişim</a></li>
+        <li><a href="../../iletişim.html">İletişim</a></li>	
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
