--- a/onlineHizmetler/MYBMW.html
+++ b/onlineHizmetler/MYBMW.html
@@ -58,10 +58,10 @@
           <ul>
             <li><a href="../kataloglar.html">Katologlar</a></li>
             <li><a href="MYBMW.html">MY BMW</a></li>
+            <li><a href="fiyatListesi.html">Fiyat Listesi</a></li>
           </ul>
         </li>
-        <li><a href="#">BMW'yi Tanı</a></li>
-        <li><a href="../iletişim.html">İletişim</a></li>
+        <li><a href="../iletişim.html">İletişim</a></li>	
       </ul>
     </div>
     <div id="icerikDiv"><!-- InstanceBeginEditable name="icerik" -->
