Fiyat Kredi Tablosu html komutları

--- a/modeller/1Series/1Series.html
+++ b/modeller/1Series/1Series.html
@@ -172,6 +172,53 @@
 		
 	</table>
 	
+	<table border = "1" width = "90%" cellspacing = "15" >
+		
+		<tr>
+			
+			<td colspan = "4" ><a class = "">BİLGİ VE TEKLİF ALIN.</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><a class = "">BMW 1 Serisi, şimdi size özel teklif ve finansman koşulları ile Borusan Otomotiv BMW Yetkili Satıcılarında. Takas indirimi veya kredi avantajlarından yararlanmak* ve detaylı bilgi almak için formumuzu doldurun, biz sizi arayalım.</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Kredi Tutarı</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Vade</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Faiz Oranı</a></td>
+			<td width = "25%" ><a class = "fiyatTabloBaslik">Aylık Ödeme Tutarı</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >500.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >6 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%0,00</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >83.333 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >500.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >12 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%1,89</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >47.235 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >500.000 TL</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >24 Ay</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >%3,29</a></td>
+			<td width = "25%" ><a class = "fiyatTabloAciklama" >30.988 TL</a></td>
+			
+		</tr>
+		
+	</table>
+	
 	<!-- InstanceEndEditable --></div>
     <div id="footer">
     	<table width="100%" >
