--- a/modeller/1Series/1Series.html
+++ b/modeller/1Series/1Series.html
@@ -172,16 +172,16 @@
 		
 	</table>
 	
-	<table border = "1" width = "90%" cellspacing = "15" >
+	<table border = "0" width = "90%" cellspacing = "30" >
 		
 		<tr>
 			
-			<td colspan = "4" ><a class = "">BİLGİ VE TEKLİF ALIN.</a></td>
+			<td colspan = "4" ><a class = "fiyatBaslik">BİLGİ VE TEKLİF ALIN.</a></td>
 			
 		</tr>
 		<tr>
 			
-			<td colspan = "4" ><a class = "">BMW 1 Serisi, şimdi size özel teklif ve finansman koşulları ile Borusan Otomotiv BMW Yetkili Satıcılarında. Takas indirimi veya kredi avantajlarından yararlanmak* ve detaylı bilgi almak için formumuzu doldurun, biz sizi arayalım.</a></td>
+			<td colspan = "4" ><a class = "fiyatAcıklama">BMW 1 Serisi, şimdi size özel teklif ve finansman koşulları ile Borusan Otomotiv BMW Yetkili Satıcılarında. Takas indirimi veya kredi avantajlarından yararlanmak* ve detaylı bilgi almak için formumuzu doldurun, biz sizi arayalım.</a></td>
 			
 		</tr>
 		<tr>
@@ -202,6 +202,11 @@
 		</tr>
 		<tr>
 			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
+			
+		</tr>
+		<tr>
+			
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >500.000 TL</a></td>
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >12 Ay</a></td>
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >%1,89</a></td>
@@ -210,10 +215,20 @@
 		</tr>
 		<tr>
 			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
+			
+		</tr>
+		<tr>
+			
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >500.000 TL</a></td>
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >24 Ay</a></td>
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >%3,29</a></td>
 			<td width = "25%" ><a class = "fiyatTabloAciklama" >30.988 TL</a></td>
+			
+		</tr>
+		<tr>
+			
+			<td colspan = "4" ><hr size = "1" color = "#aaaaaa" ></td>
 			
 		</tr>
 		
